make my profile prettier

--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
-<!-- Specs
-Build a simple HTML profile page with the following elements (use the right HTML tags):
-
-an image of yourself
-a header and sub-header with your name and your job title (you can put programmer now 💻)
-a description of yourself
-a list of your social links
-a table showing your projects, favorite movies/programming languages/sport teams/recipes, etc. whatever you want. -->
-
-
-<DOCTYPE
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -26,10 +16,12 @@ a table showing your projects, favorite movies/programming languages/sport teams
       <h2>Programmer @Le Wagon</h2>
 
       <p>
-        After 5 years living abroad and working in the Online Advertising industry, I got bored, came home in Lyon and joined Le Wagon. My mission: <strong>level up!</strong>
+        After 5 years living abroad and working in the Online Advertising industry, I got bored, came home in Lyon and joined Le Wagon.
       </p>
 
-      <a class="btn-blue" href="https://www.linkedin.com/in/philippe-morfin-18293710/">See full profile on LinkedIn</a>
+      <p class="bottom-margin-30px">My mission: <strong>level up!</strong></p>
+
+      <a class="btn-blue" href="http://www.philippemorfin.com" target=_blank>See more...</a>
     </div>
 
     <div class="box-white text-center">
