--- a/index.html
+++ b/index.html
@@ -4,112 +4,137 @@
     <meta charset="utf-8">
     <title>My personal page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,800" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <link  href="style.css" rel="stylesheet">
   </head>
 
   <body>
-
-    <div class="box-white text-center" id=top-box>
-    <img src="./images/profile-picture.jpg" alt="Philippe Morfin" id="profile-picture">
-      <h1>Philippe Morfin</h1>
-      <h2>Programmer @Le Wagon</h2>
-
-      <p>
-        After 5 years living abroad and working in the Online Advertising industry, I got bored, came home in Lyon and joined Le Wagon.
-      </p>
-
-      <p class="bottom-margin-30px">My mission: <strong>level up!</strong></p>
-
-      <a class="btn-blue" href="http://www.philippemorfin.com" target=_blank>See more...</a>
-    </div>
-
-    <div class="box-white text-center">
-      <ul class="list-inline">
-        <li>
-          <a href="https://www.facebook.com/pmorfin">
-            <i class="fa fa-facebook"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/philippe-morfin-18293710/">
-            <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com/earlyad">
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-
-    <div class="box-white text-center" id="places">
-      <h2>Where I lived</h2>
-
-      <table>
-        <tbody>
-          <tr>
-            <td>
-              <img src="./images/australia.jpg" alt="Australia">
-            </td>
-            <td>
-              <h3>Australia - Sunshine Coast</h3>
-              <p>During my studies at IDRAC Lyon, I've spent 6 months in the North East of Australia in the state of Queensland. There, I attended the University of Sunshine Coast in Mooloolaba.</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./images/paris.jpg" alt="Paris">
-            </td>
-            <td>
-              <h3>France - Paris</h3>
-              <p>At the end of my year at EM Lyon, I moved to Paris for almost a year to work for a French Tech company called Parrot. I was there at the time they launched their first BtoC drone!</p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./images/wroclaw.jpg" alt="Wroclaw">
-            </td>
-            <td>
-              <h3>Poland - Wroclaw</h3>
-              <p>I started my career in Wroclaw, Poland. With Google, I've spent 2 years in this booming economy, with strong influences from Germany, Russia and Czech Republic. </p>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="./images/dublin.jpg" alt="Dublin">
-            </td>
-            <td>
-              <h3>Ireland - Dublin</h3>
-              <p>As my career at Google continued, I moved to their European HQ in Dublin where about 5,000 people work. It's a huge place to work, with 5 buildings of at leat 8 floors each. </p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="box-white text-center" id="social-links">
-      <h2>About this page</h2>
-      <p>This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
-
-      <ul class="list-inline">
+    <div id="sidebar">
+      <ul class="list-vertical">
        <li>
-         <a href="#">
-           <i class="fa fa-heart"></i>
+         <a href="#summary">
+           <i class="fas fa-portrait color-white"></i>
          </a>
        </li>
        <li>
-         <a href="#">
-           <i class="fa fa-share"></i>
+         <a href="#socialnetworks">
+           <i class="fas fa-network-wired color-white"></i>
          </a>
        </li>
        <li>
-         <a href="#">
-           <i class="fa fa-star"></i>
+         <a href="#places">
+           <i class="fas fa-map-marked-alt color-white"></i>
          </a>
        </li>
       </ul>
     </div>
+    <div id="page-content">
+      <div class="box-white text-center" id=summary >
+      <img src="./images/profile-picture.jpg" alt="Philippe Morfin" id="profile-picture">
+        <h1>Philippe Morfin</h1>
+        <h2>Programmer @Le Wagon</h2>
+
+        <p class="text-center">
+          After 5 years living abroad and working in the Online Advertising industry, I got bored, came home in Lyon and joined Le Wagon.
+        </p>
+
+        <p class="text-center bottom-margin-30px">My mission: <strong>level up!</strong></p>
+
+        <a class="btn-blue" href="http://www.philippemorfin.com" target=_blank>See more...</a>
+      </div>
+
+      <div class="box-white text-center" id="socialnetworks">
+        <ul class="list-inline">
+          <li>
+            <a href="https://www.facebook.com/pmorfin">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/philippe-morfin-18293710/">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/earlyad">
+              <i class="fab fa-twitter-square"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="box-white text-center" id="places">
+        <h2>Where I lived</h2>
+
+        <table>
+          <tbody>
+            <tr>
+              <td>
+                <img src="./images/australia.jpg" alt="Australia">
+              </td>
+              <td>
+                <h3>Australia - Sunshine Coast</h3>
+                <p>During my studies at IDRAC Lyon, I've spent 6 months in the North East of Australia in the state of Queensland. There, I attended the University of Sunshine Coast in Mooloolaba.</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./images/paris.jpg" alt="Paris">
+              </td>
+              <td>
+                <h3>France - Paris</h3>
+                <p>At the end of my year at EM Lyon, I moved to Paris for almost a year to work for a French Tech company called Parrot. I was there at the time they launched their first BtoC drone!</p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./images/wroclaw.jpg" alt="Wroclaw">
+              </td>
+              <td>
+                <h3>Poland - Wroclaw</h3>
+                <p>I started my career in Wroclaw, Poland. With Google, I've spent 2 years in this booming economy, with strong influences from Germany, Russia and Czech Republic. </p>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <img src="./images/dublin.jpg" alt="Dublin">
+              </td>
+              <td>
+                <h3>Ireland - Dublin</h3>
+                <p>As my career at Google continued, I moved to their European HQ in Dublin where about 5,000 people work. It's a huge place to work, with 5 buildings of at leat 8 floors each. </p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+      <div class="box-white text-center" id="social-links">
+        <h2>About this page</h2>
+        <p class="text-center">This page has been coded during the <a href="https://lewagon.com/program" target="_blank">FullStack program @LeWagon</a>. That was probably the best experience of my entire life.</p>
+
+        <ul class="list-inline">
+         <li>
+           <a href="#">
+             <i class="fa fa-heart"></i>
+           </a>
+         </li>
+         <li>
+           <a href="#">
+             <i class="fa fa-share"></i>
+           </a>
+         </li>
+         <li>
+           <a href="#">
+             <i class="fa fa-star"></i>
+           </a>
+         </li>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+
   </body>
 </html>
