enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </td>
               <td>
                 <h3>Ireland - Dublin</h3>
-                <p>As my career at Google continued, I moved to their European HQ in Dublin where about 5,000 people work. It's a huge place to work, with 5 buildings of at leat 8 floors each. </p>
+                <p>As my career at Google continued, I moved to their European HQ in Dublin where about 5,000 people work. It's a huge place to work, with 5 buildings of at least 8 floors each. </p>
               </td>
             </tr>
           </tbody>
