enhanced my profile with a fixed sidebar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           After 5 years living abroad and working in the Online Advertising industry, I got bored, came home in Lyon and joined Le Wagon.
         </p>
 
-        <p class="text-center bottom-margin-30px">My mission: <strong>level up!</strong></p>
+        <p class="text-center padding-20px">My mission: <strong>level up!</strong></p>
 
         <a class="btn-blue" href="http://www.philippemorfin.com" target=_blank>See more...</a>
       </div>
